fix: button z-index

--- a/style/index.css
+++ b/style/index.css
@@ -176,6 +176,7 @@ button {
   color: var(--white-color);
   background-color: var(--primary-color);
   box-shadow: 1px 1px 8px var(--shadow-color);
+  z-index: 1001;
   cursor: pointer;
   transition: background-color .3s ease-in;
 }
